# Singularity

./: .gitignore  Cargo.toml  README.md  blackhole.conf  dev-config.toml  rustfmt.toml  singularity.timer
contrib/: singularity.service  update.sh
event-horizon/: .gitignore  Cargo.toml  README.md  docker-compose.dev.yml  package-lock.json  package.json  recursor-dev.conf
event-horizon/containers/: Dockerfile-pdns-recursor
event-horizon/migrations/2022-01-10-192745_singularity_config/: down.sql  up.sql
event-horizon/migrations/2022-01-26-104416_evh_settings/: down.sql  up.sql
event-horizon/migrations/2022-01-30-110310_singularity_config_timing/: down.sql  up.sql
event-horizon/migrations/2022-01-30-135440_builtin_output/: down.sql  up.sql
event-horizon/migrations/2022-02-16-051128_singularity_run_history/: down.sql  up.sql
event-horizon/pdns-recursor/: .gitignore
event-horizon/src/: config.rs  database.rs  error.rs  logging.rs  main.rs  rec_control.rs  routes.rs  singularity.rs  template.rs  util.rs
event-horizon/src/config/: evh_config.rs
event-horizon/src/database/: models.rs  schema.rs
event-horizon/src/error/: error_provider.rs
event-horizon/src/routes/: about.rs  error.rs  index.rs  run_singularity.rs  settings.rs  singularity.rs  stats.rs
event-horizon/src/routes/settings/: event_horizon.rs  recursor.rs  singularity.rs
event-horizon/src/routes/settings/event_horizon/: danger_zone.rs  import_singularity_config.rs  modify_singularity_config.rs
event-horizon/src/routes/settings/singularity/: add_item.rs  add_new_adlist.rs  add_new_output.rs  add_whitelisted_domain.rs  delete_adlist.rs  delete_item.rs  delete_output.rs  delete_whitelisted_domain.rs  remove_adlist.rs  set_timing.rs
event-horizon/src/routes/singularity/: history.rs  run.rs
event-horizon/src/singularity/: config_importer.rs  rendered_config.rs  runner.rs  singularity_config.rs  singularity_runner.rs
event-horizon/src/singularity/runner/: history.rs
event-horizon/src/singularity/singularity_config/: config_manager.rs
event-horizon/src/template/: about.rs  error.rs  index.rs  run_singularity.rs  settings.rs  singularity.rs  stats.rs
event-horizon/src/template/settings/: event_horizon.rs  recursor.rs  singularity.rs
event-horizon/src/template/settings/event_horizon/: configuration.rs  danger_zone.rs  general.rs  import_singularity_config.rs  modify_singularity_config.rs
event-horizon/src/template/settings/singularity/: adlists.rs  general.rs  outputs.rs  run_and_timing.rs  whitelist.rs
event-horizon/src/template/singularity/: history.rs
event-horizon/src/template/stats/: recursor.rs
event-horizon/src/util/: estimate.rs  request_callback_error.rs  request_wrapped_error.rs  round_duration.rs  timed_collection.rs
event-horizon/static/: bootstrap.min.css  evh.css
event-horizon/stylesheet/: custom.scss
singularity/: .gitignore  Cargo.toml
singularity/src/: adlist.rs  builder.rs  error.rs  lib.rs  output.rs  progress_read.rs  singularity.rs
singularity/src/singularity/: adlist.rs  builder.rs  output.rs
src/: config.rs  error.rs  logging.rs  main.rs  output.rs
