[package]
authors = ["Spanfile <spansdev@gmail.com>"]
categories = ["command-line-interface"]
description = "CLI tool for pulling known malicious domains into one or more blackhole lists in various formats."
edition = "2018"
keywords = ["cli", "dns", "blackhole"]
license = "MIT"
name = "singularity"
readme = "README.md"
repository = "https://github.com/Spanfile/Singularity"
version = "0.7.0"

[dependencies]
anyhow = "1.0.38"
chrono = "0.4.19"
confy = "0.4.0"
fern = "0.6.0"
indicatif = {version = "0.15.0", features = ["improved_unicode"]}
log = "0.4.14"
num-format = {version = "0.4.0", features = ["with-system-locale"]}
serde = {version = "1.0.123", features = ["derive"]}
structopt = "0.3.21"
tempfile = "3.2.0"
thiserror = "1.0.23"
ureq = "2.0.1"
url = {version = "2.2.0", features = ["serde"]}
