[package]
authors = ["Spanfile <spansdev@gmail.com>"]
edition = "2021"
license = "MIT"
name = "event-horizon"
readme = "README.md"
repository = "https://github.com/Spanfile/Singularity"
version = "0.1.0"

[dependencies]
singularity = {path = "../singularity", default-features = false, features = ["serde"]}

actix-files = "0.6.0-beta.13"
actix-multipart = "0.4.0-beta.12"
actix-router = "0.5.0-beta.4"
actix-web = "4.0.0-beta.19"
anyhow = "1.0.52"
chrono = "0.4.19"
diesel = {git = "https://github.com/diesel-rs/diesel", rev = "c06aa5ed88d2670d6e0d68124a6b426f22ab5079", features = ["sqlite", "r2d2", "returning_clauses_for_sqlite_3_35"]}
dotenv = "0.15.0"
envy = "0.4.2"
fern = {version = "0.6.0", features = ["colored"]}
futures-util = "0.3.19"
itertools = "0.10.3"
log = "0.4.14"
maud = "0.23.0"
serde = {version = "1.0.130", features = ["derive"]}
serde_with = "1.11.0"
thiserror = "1.0.30"
toml = "0.5.8"

[build-dependencies]
built = "0.5.1"
