[package]
authors = ["Spanfile <spansdev@gmail.com>"]
edition = "2021"
license = "MIT"
name = "event-horizon"
readme = "README.md"
repository = "https://github.com/Spanfile/Singularity"
version = "0.1.0"

[dependencies]
singularity = {path = "../singularity", default-features = false, features = ["serde"]}

actix-files = "0.6.0-beta.15"
actix-multipart = "0.4.0-beta.12"
actix-router = "0.5.0-rc.2"
actix-web = "4.0.0-beta.21"
chrono = "0.4.19"
cron_clock = "0.8.0"
# the git master is used directly because it's got the "returning_clauses_for_sqlite_3_35" feature that hasn't been released yet
diesel = {git = "https://github.com/diesel-rs/diesel", rev = "0e49ce0e22803c3b8f4141e4abe10d8b73a2c31f", features = ["sqlite", "r2d2", "returning_clauses_for_sqlite_3_35"]}
dotenv = "0.15.0"
envy = "0.4.2"
fern = {version = "0.6.0", features = ["colored"]}
futures-util = "0.3.19"
humantime = "2.1.0"
indexmap = "1.8.0"
itertools = "0.10.3"
log = "0.4.14"
maud = "0.23.0"
nanoid = "0.4.0"
redis = {version = "0.21.5", default-features = false, features = ["aio", "r2d2", "tokio-comp", "connection-manager"]}
serde = {version = "1.0.136", features = ["derive"]}
serde_with = "1.11.0"
thiserror = "1.0.30"
tokio = {version = "1.16.1", features = ["net"]}
toml = "0.5.8"
url = "2.2.2"

[build-dependencies]
built = "0.5.1"
