[package]
authors = ["Spanfile <spansdev@gmail.com>"]
categories = ["command-line-interface"]
description = "CLI tool for pulling known malicious domains into one or more blackhole lists in various formats."
edition = "2021"
keywords = ["cli", "dns", "blackhole"]
license = "MIT"
name = "singularity"
readme = "README.md"
repository = "https://github.com/Spanfile/Singularity"
version = "0.8.0"

[features]
bin = ["anyhow", "confy", "indicatif", "structopt", "serde"]
default = ["bin", "serde"]

[dependencies]
# library dependencies
chrono = "0.4.19"
fern = "0.6.0"
lazy_static = "1.4.0"
log = "0.4.14"
num-format = {version = "0.4.0", features = ["with-system-locale"]}
regex = "1.5.4"
serde = {version = "1.0.132", optional = true, features = ["derive"]}
tempfile = "3.2.0"
thiserror = "1.0.30"
ureq = "2.4.0"
url = {version = "2.2.2", features = ["serde"]}

# binary dependencies
anyhow = {version = "1.0.52", optional = true}
confy = {version = "0.4.0", optional = true}
indicatif = {version = "0.16.2", features = ["improved_unicode"], optional = true}
structopt = {version = "0.3.25", optional = true}

[[bin]]
name = "singularity"
required-features = ["bin"]
