[package]
authors = ["Spanfile <spansdev@gmail.com>"]
categories = ["command-line-interface"]
description = "CLI tool for pulling known malicious domains into one or more blackhole lists in various formats."
edition = "2021"
keywords = ["cli", "dns", "blackhole"]
license = "MIT"
name = "singularity"
readme = "README.md"
repository = "https://github.com/Spanfile/Singularity"
version = "0.8.0"

[features]
bin = ["anyhow", "confy", "dashmap", "fern", "indicatif", "log", "num-format", "structopt", "serde"]
default = ["bin", "serde"]

[dependencies]
# library dependencies
chrono = "0.4.19"
crossbeam-utils = "0.8.5"
lazy_static = "1.4.0"
regex = "1.5.4"
serde = {version = "1.0.132", optional = true, features = ["derive"]}
tempfile = "3.2.0"
thiserror = "1.0.30"
ureq = "2.4.0"
url = {version = "2.2.2", features = ["serde"]}

# binary dependencies
anyhow = {version = "1.0.52", optional = true}
confy = {version = "0.4.0", optional = true}
dashmap = {version = "5.0.0", optional = true}
fern = {version = "0.6.0", optional = true}
indicatif = {version = "0.16.2", features = ["improved_unicode"], optional = true}
log = {version = "0.4.14", optional = true}
num-format = {version = "0.4.0", features = ["with-system-locale"], optional = true}
structopt = {version = "0.3.25", optional = true}

[[bin]]
name = "singularity"
required-features = ["bin"]
